@startuml

skinparam backgroundColor #FFFFFF

'value object containing URL of an image in an external storage
class ImageResource {
    - url: String
}

' ----------------------------------- '

class User {
    - id: UUID
    - authId: String
    - name: String
    - profilePicture: ImageResource?
    - contactInfo: ContactInfo
}

User "1" *-L "0..1" ImageResource : profilePicture >

' ----------------------------------- '

class ContactInfo {
    - phone: String?
    - email: String?
    - website: String?
    - facebook: String?
    - instagram: String?
}

User "1" *-U- "1" ContactInfo : contactInfo >

' ----------------------------------- '

class Shop {
    - id: UUID
    - name: String
    - description: String?
    - owner: User
    - shopCategories: List<ShopCategory>
    - images: List<ImageResource>
    - menu: Menu
    - location: Location
    - openingHours: OpeningHours
}

User "1" --o "0..*" Shop : ownedBy <

Shop "1" *-U- "0..*" ImageResource : images >

' ----------------------------------- '

class ShopCategory {
    - name: String
    - color: Color
}

'owned by shop, filtering done using normalized names
Shop "1" *-- "0..*" ShopCategory : categories >

' ----------------------------------- '

class Menu {
    - items: List<MenuItem>
}

class MenuItem {
    - name: String
    - description: String?
    - price: PriceLabel
    - inStock: Boolean
}

'price label is a string to allow user to describe a price based on amount, quantity, currency, etc.
'price label is used only for describtion, there is no sorting, filtering etc.
class PriceLabel {
    - price: String
}

Shop "1" *-- "1" Menu : menu >
Menu "1" *-- "0..*" MenuItem : items >
MenuItem "1" *-- "1" PriceLabel : priceLabel >

' ----------------------------------- '

interface OpeningHours

class TimeOpeningHours {
    - dayToHours: Map<DayOfWeek, String>
}

class MessageOpeningHours {
    - message: String
}

OpeningHours <|-- TimeOpeningHours
OpeningHours <|-- MessageOpeningHours

Shop "1" *-- "1" OpeningHours : openingHours >

' ----------------------------------- '

class Location {
    - latitude: Double
    - longitude: Double
}

Shop "1" *-- "1" Location : location >

' ----------------------------------- '

class Review {
    - id: UUID
    - author: User
    - shop: Shop
    - rating: int
    - comment: String?
}

note right of Review::rating
    from 0 to 5
end note

Shop "1" - "0..*" Review
User "1" -- "0..*" Review : author

@enduml
